[gd_scene load_steps=4 format=3 uid="uid://cr4qr6k5sgt6k"]

[ext_resource type="Script" path="res://scripts/shooter_enemy.gd" id="1_7rws7"]
[ext_resource type="Texture2D" uid="uid://pp36vjgwtu0f" path="res://assets/sprites/Robot_fire.png" id="2_tx2sd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtbtw"]
size = Vector2(27, 38)

[node name="ShooterEnemy" type="CharacterBody2D"]
script = ExtResource("1_7rws7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_mtbtw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_tx2sd")
flip_h = true
hframes = 4

[node name="BulletSpawnLeft" type="Node2D" parent="."]
position = Vector2(-21, -3)

[node name="BulletSpawnRight" type="Node2D" parent="."]
position = Vector2(21, -3)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.5, -2)
scale = Vector2(6.95, 6.7)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
